--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Restaurant</title>
+    <title>Food House</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -69,7 +69,7 @@
                     <a href="#"class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"class="nav-link">Categories</a>
+                    <a href="src/categories.html"class="nav-link">Categories</a>
                 </li>
                 <li class="nav-item">
                     <a href="#"class="nav-link">Meals</a>
@@ -78,7 +78,7 @@
                     <a href="#"class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"class="nav-link">Booking</a>
+                    <a href="#"class="nav-link">Order</a>
                 </li>
             </ul>
         </div>
