--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                             </p>
                         </div>
                         <div class="reg">
-                            <a href="#" class="mr-2 mb-0">Sign-Up</a>
-                            <a href="#">Log In</a>
+                            <a href="src/login.html" class="mr-2 mb-0">Sign-Up</a>
+                            <a href="src/login.html">Log In</a>
                         </div>
                     </div>
                 </div>
@@ -72,13 +72,13 @@
                     <a href="src/categories.html"class="nav-link">Categories</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"class="nav-link">Meals</a>
+                    <a href="src/meals.html"class="nav-link">Meals</a>
                 </li>
                 <li class="nav-item">
                     <a href="#"class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"class="nav-link">Order</a>
+                    <a href="src/order.html"class="nav-link">Order</a>
                 </li>
             </ul>
         </div>
@@ -94,7 +94,7 @@
             </div>
             <h2 class="font-weight-bold">Healthy Food, Happy Mood</h2>
             <div class="actions">
-                <a href="#"class="btn-get-started bg-warning">Order Now</a>
+                <a href="src/meals.html"class="btn-get-started bg-warning">Order Now</a>
             </div>
         </div>
     </section>
@@ -453,7 +453,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-4">
-                    <a href="#"class="btn btn-prod d-block">
+                    <a href="src/meals.html"class="btn btn-prod d-block">
                         View all products
                         <i class="fas fa-carrot"></i>
                     </a>
