--- a/src/categories.html
+++ b/src/categories.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food House</title>
     <link rel="stylesheet" href="../css/categoree.css">
-<script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -72,13 +72,13 @@
                     <a href="#"class="nav-link">Categories</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"class="nav-link">Meals</a>
+                    <a href="meals.html"class="nav-link">Meals</a>
                 </li>
                 <li class="nav-item">
                     <a href="#"class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"class="nav-link">Order</a>
+                    <a href="order.html"class="nav-link">Order</a>
                 </li>
             </ul>
         </div>
@@ -94,7 +94,7 @@
             
             <h2 class="font-weight-bold">Welcome To Category Section</h2>
             <div class="actions">
-                <a href="#"class="btn-get-started bg-warning">Place Order</a>
+                <a href="meals.html"class="btn-get-started bg-warning">Place Order</a>
             </div>
         </div>
     </section>
@@ -300,5 +300,9 @@
             </div>
         </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+ 
 </body>
 </html>
