--- a/src/placeorder.html
+++ b/src/placeorder.html
@@ -342,7 +342,7 @@
             </span>
           </div>
           <button type="button" onclick="window.location.href='#'">Place Order</button>
-        </div><!-- Yorder -->
+        </div>
        </div>
       </div>
 </body>
