--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
         <div class="container">
             <div class="section-title">
                 <h2 class="text-center font-weight-bold">Categories</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.</p>
+               <p> </p>
             </div>
             <div class="row">
                 <div class="col-md-6 d-flex align-items-stretch">
@@ -117,10 +115,7 @@
                                 <a href="#">Salad Kinds</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
+                               Turkey Club, Thai Chicken, Cobb, Chicken Caeser, Twoli, FarmHouse, Mediterranean, Pasta Salad, Green Salad
                             </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
@@ -141,10 +136,7 @@
                                 <a href="#">Meat Dishes</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
+                                Nachos, Smoked Chicken Wings, Eddie's Eggrolls, Trailer Park Bruschetta, Pickle Fries, House Made Jekry 
                             </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
@@ -165,10 +157,7 @@
                                 <a href="#">Pasta Dishes</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
+                                Four Cheese Pasta, Pasta Carbonara, Pasta Con Pomodoro E Basilico, Whole Wheat Pasta in Mushroom Sauce, Lasagna 
                             </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
@@ -189,10 +178,7 @@
                                 <a href="#">Curry Dishes</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
+                                Palak Paneer Curry, Chicken Tikka Masala, Egg Curry, Goan Pork Vindaloo,  Tamarind Sauce Fish Curry,  Tandoori Chicken, Red Lentil Curry 
                             </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
@@ -633,12 +619,10 @@
                         </div>
                         <h3 class="heading mb-3">
                             <a href="#">
-                                Lorem Ipsum
+                                Chinese
                             </a>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Ullam illo magnam, nihil nam odit exercitationem voluptatem 
-                        laudantium suscipit deserunt eum.</p>
+                        <p>We offer a variety of chinese foods & starters,each made from the highest quality ingredients soirced from all over the globe. There's something special in every bite and spoon. </p>
                         <a href="#" class="btn-custom">Continue
                             <i class="fa fa-long-arrow-right"></i>
                         </a>
@@ -660,12 +644,10 @@
                         </div>
                         <h3 class="heading mb-3">
                             <a href="#">
-                                Lorem Ipsum
+                                Meal
                             </a>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Ullam illo magnam, nihil nam odit exercitationem voluptatem 
-                        laudantium suscipit deserunt eum.</p>
+                        <p>We offer a variety of complete meal whether dinner or lunch ,each made from the highest quality ingredients sourced from all over the globe. There's something special in every bite and spoon.</p>
                         <a href="#" class="btn-custom">Continue
                             <i class="fa fa-long-arrow-right"></i>
                         </a>
@@ -687,12 +669,10 @@
                         </div>
                         <h3 class="heading mb-3">
                             <a href="#">
-                                Lorem Ipsum
+                            Indian Snacks
                             </a>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Ullam illo magnam, nihil nam odit exercitationem voluptatem 
-                        laudantium suscipit deserunt eum.</p>
+                       =<p>We offer a variety of Indian snacks & starters,each made from the highest quality ingredients sourced from all over the globe. There's something special in every bite and spoon.</p>
                         <a href="#" class="btn-custom">Continue
                             <i class="fa fa-long-arrow-right"></i>
                         </a>
@@ -714,12 +694,10 @@
                         </div>
                         <h3 class="heading mb-3">
                             <a href="#">
-                                Lorem Ipsum
+                            Soups
                             </a>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Ullam illo magnam, nihil nam odit exercitationem voluptatem 
-                        laudantium suscipit deserunt eum.</p>
+                     <p>We offer a variety of veg and non-veg soups ,each made from the highest quality ingredients sourced from all over the globe. There's something special in every spoon.</p>
                         <a href="#" class="btn-custom">Continue
                             <i class="fa fa-long-arrow-right"></i>
                         </a>
