--- a/src/categories.html
+++ b/src/categories.html
@@ -102,9 +102,7 @@
         <div class="container">
             <div class="section-title">
                 <h2 class="text-center font-weight-bold">Categories</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.</p>
+                <p style="text-align: center;">We Offer You Variety of Food items and Snacks. Go, Grab it now and enjoy every bite of it.</p>
             </div>
             <div class="row">
                 <div class="col-md-6 d-flex align-items-stretch">
@@ -117,10 +115,7 @@
                                 <a href="#">Snacks</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
+                                Punugulu, Churumuri, Veg Kawab, Cutlet, Potato Wedges, Khaman Dhokla,  Sweet Corn, Pav Bhaji, Samosa, Manchurian, Spring Rolls
                             </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
@@ -140,10 +135,7 @@
                                 <a href="#">Drinks</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
+                               Sugarcane Juice, Jal-Jeera, Rooh Afza Sharbat, Jigarthanda, Shikanji, Aam Panna, Lassi, Soda Lime, Tea Coffee, Green Ice Lemon Tea 
                             </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
@@ -163,10 +155,7 @@
                                 <a href="#">Curry Dishes</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
+                                Palak Paneer Curry, Chicken Tikka Masala, Egg Curry, Goan Pork Vindaloo,  Tamarind Sauce Fish Curry,  Tandoori Chicken, Red Lentil Curry 
                             </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
@@ -186,10 +175,7 @@
                                 <a href="#">Fast Food</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
+                                    Burger King Whopper, Five Guys Cheeseburger, KFC Roiginak Recipe Chicken, White Castle Sliders, Arby's Roast Beef SAndwich, Taco Bell Burrito Supreme, Taco Bell's NAcho Fries, GolGappe, Aloo Chat, Aloo Tikki, Chowmein, Maggie 
                             </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
@@ -209,11 +195,7 @@
                                 <a href="#">Desserts</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
-                            </p>
+                               Almond And Rose Kheer, Crispy Kalakand, Kasar Pista Phirni, Thandai Mousse, Sweet Kachoris, Gajar Halwa Tart, Chocolate Appo, Chocolate Kaju Katli, Kaju and Pista Roll                        </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
                                 Read More
@@ -232,10 +214,7 @@
                                 <a href="#">Salad Kinds</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
+                                Turkey Club, Thai Chicken, Cobb, Chicken Caeser, Twoli, FarmHouse, Mediterranean, Pasta Salad, Green Salad
                             </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
@@ -256,10 +235,7 @@
                                 <a href="#">Meat Dishes</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
+                                Nachos, Smoked Chicken Wings, Eddie's Eggrolls, Trailer Park Bruschetta, Pickle Fries, House Made Jekry 
                             </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
@@ -280,10 +256,7 @@
                                 <a href="#">Pasta Dishes</a>
                             </h5>
                             <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quidem tempore quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.quia dolorem ratione quod numquam omnis sequi 
-                voluptatum nulla quis.
+                                Four Cheese Pasta, Pasta Carbonara, Pasta Con Pomodoro E Basilico, Whole Wheat Pasta in Mushroom Sauce, Lasagna 
                             </p>
                             <div class="read-more"><a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
