--- a/src/meals.html
+++ b/src/meals.html
@@ -193,7 +193,7 @@
                  </div>
                  <div class="text text-center">
                      <span class="week">Deal of the week</span>
-                     <span class="category font-weight-bold">Papdi chat</span>
+                     <span class="category font-weight-bold">Chat</span>
                      <h2 class="text-white">Specification</h2>
                      <span class="price">$30.00</span>
                  </div>
